Fixed minor layout issues

--- a/css/style-blog.css
+++ b/css/style-blog.css
@@ -43,24 +43,34 @@
   width: 100%;
   background: #fff;
   overflow: hidden;
-  padding: 1em 0;
+  padding: 1em 0.67em 1em 0.67em;
 }
 
 .post {
   background: #fff;
-  padding: 2em 0;
+  overflow: hidden;
+  margin-bottom: 1em;
 }
 
 .post .header {
    border: 4px solid #7FDBFF;
-   padding: 1em 0;
+   padding: 1em 0.67em;
+   font-family: "Roboto Condensed",sans-serif;
 }
 
 .blog-footer {
   width: 100%;
   margin: 0 auto;
-  background: #f5f5f5;
+  background: #111;
+  color: #fff;
 }
+
+.blog-footer a {
+  color: #7FDBFF;
+  text-decoration: none;
+}
+
+.blog-footer a:hover {text-decoration: none;}
 
 .post h1.post-title { font-size: 2.5em; font-weight: bold; margin: 0; font-family: "Roboto Condensed",sans-serif; color: #111; text-align: center }
 
@@ -68,11 +78,14 @@
 .post h1.post-title a:hover {color: #ccc}
 
 .post p.post-date {margin:0.50em 0; text-align:center; color:#999;}
-
 hr {
+    width: 10%;
     border: none;
-    height: 1px;
+    height: 4px;
+    margin-top: 1em;
     /* Set the hr color */
-    color: #ddd; /* old IE */
-    background-color: #ddd; /* Modern Browsers */
+    color: #7FDBFF; /* old IE */
+    background-color: #7FDBFF; /* Modern Browsers */
 }
+
+.post:last-child {margin-bottom: 0 }
